<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="poitot.com.cryptoexample.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"/>

        <EditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvInstructions"
            android:singleLine="false"
            android:minLines="5"
            android:text="@string/example_input"
            />

        <Button
            android:id="@+id/btnEncrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etInput"
            android:layout_alignParentLeft="true"
            android:text="@string/encrypt" />

        <Button
            android:id="@+id/btnDecrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etInput"
            android:layout_toRightOf="@+id/btnEncrypt"
            android:text="@string/decrypt" />

        <Button
            android:id="@+id/btnPaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etInput"
            android:layout_alignParentRight="true"
            android:text="@string/paste" />

        <TextView
            android:id="@+id/tvOutputHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEncrypt"
            android:text="@string/result_encrypted"
            style="@style/Title"
            />

        <android.support.v7.widget.CardView
            android:id="@+id/cvOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOutputHeader"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp">

            <TextView
                android:id="@+id/tvOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:padding="11dp"
                android:text="@string/output_example"
                />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvOutput"
            android:layout_alignParentLeft="true"
            android:text="@string/copy" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvOutput"
            android:layout_alignParentRight="true"
            android:text="@string/clear" />


    </RelativeLayout>


</ScrollView>